--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 
-/backend/node_modules
-/frontend/node_modules
+**/backend/node_modules
+**/front/node_modules
 
-/frontend/coverage
-/frontend/build
+/front/coverage
+/front/build
